Clean up code and beautify comments